2007-10-13  Miguel de Icaza  <miguel@novell.com>

	* SerialPortStream.cs: Send a break on the Unix case.

2007-08-12  Lukasz Byczynski <lukaszb@forcom.com.pl>

	* SerialPortStream.cs: added timeout handling on write

	* WinSerialStream.cs: fixed setting handshake flags 

2007-07-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* SerialPort.cs: Don't throw ArgumentOutOfRangeException when the
	buffer has Length = 0 (and has the appropriate arguments).

2007-05-21  Atsushi Enomoto  <atsushi@ximian.com>

	* SerialPort.cs : slightly boring 2.0 attributes.

2007-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* WinSerialStream.cs: Fix build due to NativeOverlapped being updated
	to 2.0 definition (int to IntPtr).

Wed Apr 11 15:40:55 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* WinSerialStream.cs: fixed logic for signal value check (bug #81342).

2006-11-18  Jelle Hissink <Jelle.Hissink@C-it.nl>

	* SerialPortStream.cs: Fix the parameters in Read, and also poll
	before the read, so we can thorw the TimeoutException.

2006-09-28  Andrew Skiba  <andrews@mainsoft.com>

	* SerialPort.cs,WinSerialStream.cs: TARGET_JVM

2006-08-14  Chris Toshok  <toshok@ximian.com>

	* SerialPort.cs: the paths returned by Directory.GetFiles have the
	directory at the beginning of the string.

2006-08-13  Miguel de Icaza  <miguel@novell.com>

	* SerialPort.cs (ReadTo): Implemented.
	Add a couple of missing checks.

	Also handle ttyUSB for Chris.

	* SerialPortStream.cs (BytesToRead, BytesToWrite): Implement. 

	* SerialPort.cs (ReadByte): Go directly to the stream, no need to
	call the wrapper code.

	(ReadChar): implement.

	(ReadLine): implement.
	
	Add DefaultValueAttributes to various methods.

	* SerialPortStream.cs, WinSerialStream.cs: Use the same checking
	we use elsewhere for parameters.

2005-05-12  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ISerialStream.cs: Add support for break state.
	* SerialPort.cs: Likewise.